--- a/Resources/Public/Less/Theme/figure.less
+++ b/Resources/Public/Less/Theme/figure.less
@@ -17,5 +17,6 @@ figure {
         font-size: 0.85em;
         word-break: break-all;
         opacity: 0.8;
+        text-align: center;
     }
 }
